--- a/q/275165.html
+++ b/q/275165.html
@@ -26,11 +26,43 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>018</td><td>Charcoal</td><td>240826T210607Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275168#275168">Neil</a></td></tr>
-<tr d-ix="1"><td>078</td><td>JavaScript ES10</td><td>240826T210254Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275167#275167">Arnauld</a></td></tr>
+<tr d-ix="0"><td>078</td><td>JavaScript ES10</td><td>240826T210254Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275167#275167">Arnauld</a></td></tr>
+<tr d-ix="1"><td>018</td><td>Charcoal</td><td>240826T210607Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275168#275168">Neil</a></td></tr>
 <tr d-ix="2"><td>023</td><td>Jelly</td><td>240826T191846Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275166#275166">hyper-ne</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 18 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES10), 78 bytes</h1>
+<p>Returns a flat array.</p>
+
+<pre class="lang-javascript prettyprint-override"><code>f=([v,...a],b=v)=&gt;v?[a.map((p,i)=&gt;[v,p,p,a[i+1]?v:i?a[0]:b]),f(a,b)].flat(2):a
+</code></pre>
+<p><a href="https://tio.run/##ZYrNCsIwEITvPoXktMG4qMdCLf69gbeQw6Y2kpJ2g5W8flyPIsM3MMw3UqGlf8X83s78GGoNLdhiEJGc8W3R7bF0lnCiDJBNlC13lpCNm73rShM7sjvXeKdNADJeOwyJ3nDQDdWe54XTgImfEMCqU4r9oIw6s5e@86ScxpHjDGqttF79@V9XuAhX4fbr1w8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<h3>Commented</h3>
+<pre class="lang-javascript prettyprint-override"><code>f = (               // f is a recursive function taking:
+  [ v,              //   v   = next element
+       ...a ],      //   a[] = remaining elements
+  b = v             //   b   = copy of the first element
+) =&gt;                //
+v ?                 // if v is defined:
+  [                 //
+    a.map((p, i) =&gt; //   for each element p at index i in a[]:
+      [ v, p,       //     insert the pair (v, p)
+        p,          //     insert the pair (p, X), where ...
+        a[i + 1] ?  //       if this is not the last element:
+          v         //         X = v
+        :           //       else:
+          i ?       //         if i &gt; 0:
+            a[0]    //           X = a[0]
+          :         //         else:
+            b       //           X = b
+      ]             //
+    ),              //    end of map()
+    f(a, b)         //    append the result of a recursive call
+  ].flat(2)         //    flatten
+:                   // else:
+  a                 //   stop the recursion (a[] is empty)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 18 bytes</h1>
 <pre><code>Φ⭆θ⭆…θκ⁺×²λ×²ικ§θ⁰
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMMtM6cktUgjuATIS/dNLNAo1FFAcJwrk3NSnTPywcLZmjoKATmlxRohmbmpxRpGOgo5QBE4J1MTCECqNK25IGY7lnjmpaRWgPQaAEX//09MSk5J/a9blgMA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: <a href="https://oeis.org/A097285" rel="nofollow noreferrer">A097285</a> is almost the sequence of indices, with each element doubled, except that there is only one of the first element at the start, the second coming at the end.</p>
@@ -47,13 +79,6 @@
            ×²       Doubled
 Φ             κ§θ⁰  Remove the first element and append it to the end
 </code></pre>
-</div>
-<div id="pu1" class="pu"><h1>JavaScript (ES10), 78 bytes</h1>
-<p>Returns a flat array.</p>
-
-<pre class="lang-javascript prettyprint-override"><code>f=([v,...a],b=v)=&gt;v?[a.map((p,i)=&gt;[v,p,p,a[i+1]?v:i?a[0]:b]),f(a,b)].flat(2):a
-</code></pre>
-<p><a href="https://tio.run/##ZYrNCsIwEITvPoXktMG4qMdCLf69gbeQw6Y2kpJ2g5W8flyPIsM3MMw3UqGlf8X83s78GGoNLdhiEJGc8W3R7bF0lnCiDJBNlC13lpCNm73rShM7sjvXeKdNADJeOwyJ3nDQDdWe54XTgImfEMCqU4r9oIw6s5e@86ScxpHjDGqttF79@V9XuAhX4fbr1w8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jellylanguage" rel="nofollow noreferrer">Jelly</a>, 23 bytes</h1>
 <pre><code>2œṖ$ÐƤṖUp/€żUẎṖƲ€Ẏ;Uṡ2Ɗ
