--- a/q/275165.html
+++ b/q/275165.html
@@ -26,17 +26,17 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>088</td><td>Python</td><td>240826T215815Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275172#275172">shape wa</a></td></tr>
+<tr d-ix="0"><td>076</td><td>Python</td><td>240826T215815Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275172#275172">shape wa</a></td></tr>
 <tr d-ix="1"><td>078</td><td>JavaScript ES10</td><td>240826T210254Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275167#275167">Arnauld</a></td></tr>
 <tr d-ix="2"><td>009</td><td>Vyxal</td><td>240826T212519Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275169#275169">emanresu</a></td></tr>
 <tr d-ix="3"><td>018</td><td>Charcoal</td><td>240826T210607Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275168#275168">Neil</a></td></tr>
 <tr d-ix="4"><td>023</td><td>Jelly</td><td>240826T191846Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275166#275166">hyper-ne</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 88 bytes</h1>
-<pre class="lang-python prettyprint-override"><code>lambda L:sum([[a,a,b,b]for a,b in combinations(L,2)],L[-1:])[:-1]
-from itertools import*
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>88</s> 76 bytes</h1>
+<pre class="lang-python prettyprint-override"><code>lambda L:sum([[a,a,b,b]for i,a in enumerate(L)for b in L[i+1:]],L[-1:])[:-1]
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=JYwxDsIgFIZ3T_E2wNChTobEG3AAE2SAViJJ4TX0dfAsLiRGj-E9vI02LN__DX--x3u-0w1zfYbT5bVS6I7f8-SSHx1otayJG-Okk156G7DA3yBmGDD5mB1FzAvX8iCs1KbrlRVGdb3dhYIJIl0LIU4LxDRjoX3rf-YSM_HADXNMAvMbhg0js0K0U61tfw" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=m72soLIkIz9vweI025ilpSVpuhY3fXISc5NSEhV8rIpLczWioxN1EnWSdJJi0_KLFDJ1EhUy8xRS80pzU4sSS1I1fDRBwkkgQZ_oTG1Dq9hYHZ9oXSCtGW2laxgLMXNfQVFmXolGmka0eqK6joJ6EohIBhEp6rGamhBFCxZAaAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>-12 bytes after partially incorporating a golfing suggestion from att, replacing a usage of <code>itertools.combinations</code> (fully incorporating it would require larger changes).</p>
 <p>Outputs as a flattened list.</p>
 <p>Ungolfed algorithm:</p>
 <pre class="lang-python prettyprint-override"><code>from collections import deque
@@ -67,16 +67,15 @@ def f(L):
 <p>Given <span class="math-container">\$n\$</span> elements, we do <span class="math-container">\$n-1\$</span> iterations from <span class="math-container">\$j=0\$</span> to <span class="math-container">\$j=n-2\$</span>.</p>
 <p>At each iteration, we generate:</p>
 <ul>
-<li>all the pairs of the form <span class="math-container">\$(j,k),\:j&lt;k&lt;n\$</span></li>
-<li>interleaved with the pairs of the form <span class="math-container">\$(k,j),\:j&lt;k&lt;n-1\$</span></li>
-<li>followed by the pair <span class="math-container">\$(n,j+1)\$</span> if <span class="math-container">\$j&lt;n-2\$</span> or <span class="math-container">\$(n,0)\$</span> otherwise</li>
+<li>all the pairs of the form <span class="math-container">\$\color{blue}{(j,k)},\:j&lt;k&lt;n\$</span></li>
+<li>interleaved with the pairs of the form <span class="math-container">\$\color{green}{(k,j)},\:j&lt;k&lt;n-1\$</span></li>
+<li>followed by the pair <span class="math-container">\$\color{purple}{(n-1,j+1)}\$</span> if <span class="math-container">\$j&lt;n-2\$</span> or <span class="math-container">\$\color{red}{(n-1,0)}\$</span> otherwise</li>
 </ul>
 <p>With five elements, this gives:</p>
-<pre><code>j = 0: (0,1 / 1,0) / (0,2 / 2,0) / (0,3 / 3,0) / (0,4 / 4,1)
-j = 1: (1,2 / 2,1) / (1,3 / 3,1) / (1,4 / 4,2)
-j = 2: (2,3 / 3,2) / (2,4 / 4,3)
-j = 3: (3,4 / 4,0)
-</code></pre>
+<p><span class="math-container">$$\begin{aligned}&amp;j=0:\color{blue}{(0,1)}\color{green}{(1,0)}\color{blue}{(0,2)}\color{green}{(2,0)}\color{blue}{(0,3)}\color{green}{(3,0)}\color{blue}{(0,4)}\color{purple}{(4,1)}\\
+&amp;j=1:\color{blue}{(1,2)}\color{green}{(2,1)}\color{blue}{(1,3)}\color{green}{(3,1)}\color{blue}{(1,4)}\color{purple}{(4,2)}\\
+&amp;j=2:\color{blue}{(2,3)}\color{green}{(3,2)}\color{blue}{(2,4)}\color{purple}{(4,3)}\\
+&amp;j=3:\color{blue}{(3,4)}\color{red}{(4,0)}\end{aligned}$$</span></p>
 <h3>Commented</h3>
 <pre class="lang-javascript prettyprint-override"><code>f = (               // f is a recursive function taking:
   [ v,              //   v   = next element
