--- a/q/275147.html
+++ b/q/275147.html
@@ -26,16 +26,23 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>020</td><td>Japt</td><td>240826T101247Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275159#275159">Shaggy</a></td></tr>
-<tr d-ix="1"><td>070</td><td>Java</td><td>240826T081310Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275157#275157">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>017</td><td>05AB1E legacy</td><td>240826T074442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275156#275156">Kevin Cr</a></td></tr>
-<tr d-ix="3"><td>019</td><td>Charcoal</td><td>240826T062329Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275155#275155">Neil</a></td></tr>
-<tr d-ix="4"><td>017</td><td>Retina 0.8.2</td><td>240826T035406Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275151#275151">Neil</a></td></tr>
-<tr d-ix="5"><td>034</td><td>K ngn/k</td><td>240826T025549Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275150#275150">akamayu</a></td></tr>
-<tr d-ix="6"><td>021</td><td>Jelly</td><td>240826T022836Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275149#275149">Jonathan</a></td></tr>
-<tr d-ix="7"><td>061</td><td>JavaScript Node.js</td><td>240826T014654Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275148#275148">l4m2</a></td></tr>
+<tr d-ix="0"><td>060</td><td>JavaScript Node.js</td><td>240826T014654Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275148#275148">l4m2</a></td></tr>
+<tr d-ix="1"><td>020</td><td>Japt</td><td>240826T101247Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275159#275159">Shaggy</a></td></tr>
+<tr d-ix="2"><td>070</td><td>Java</td><td>240826T081310Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275157#275157">Kevin Cr</a></td></tr>
+<tr d-ix="3"><td>017</td><td>05AB1E legacy</td><td>240826T074442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275156#275156">Kevin Cr</a></td></tr>
+<tr d-ix="4"><td>019</td><td>Charcoal</td><td>240826T062329Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275155#275155">Neil</a></td></tr>
+<tr d-ix="5"><td>017</td><td>Retina 0.8.2</td><td>240826T035406Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275151#275151">Neil</a></td></tr>
+<tr d-ix="6"><td>034</td><td>K ngn/k</td><td>240826T025549Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275150#275150">akamayu</a></td></tr>
+<tr d-ix="7"><td>021</td><td>Jelly</td><td>240826T022836Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275149#275149">Jonathan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 20 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 60 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>x=&gt;x.replace(/\W(\w*)/g,(_,y)=&gt;y?(s+=`)(${y})`,'(*'):s,s='')
+</code></pre>
+<p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/Z9m@7/C1q5Cryi1ICcxOVVDPyZcI6ZcS1M/XUcjXqdS09au0l6jWNs2QVNDpbqyVjNBR11DS13Tqlin2FZdXfO/NVdyfl5xfk6qXk5@ukaahrpbfr6GlqYGkNJU19TEIeuUWIRNFigM1atDlAogrgKp@g8A" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>-1B from Shaggy</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 20 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>r&quot;%(%*&quot;È+pUè,Ãr,&quot;))(
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=ciIlKCUqIsgrcFXoLMNyLCIpKSg&amp;input=IkJhcigqKShGb28sQmFyLEJheiki" rel="nofollow noreferrer">Try it</a></p>
@@ -49,7 +56,7 @@ r                        :Replace
               r,&quot;))(     :Replace commas with parentheses
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1>Java, 70 bytes</h1>
+<div id="pu2" class="pu"><h1>Java, 70 bytes</h1>
 
 <pre class="lang-java prettyprint-override"><code>s-&gt;s.replace(&quot;(*&quot;,&quot;(*&quot;.repeat(s.split(&quot;,&quot;).length)).replace(&quot;,&quot;,&quot;))(&quot;)
 </code></pre>
@@ -64,7 +71,7 @@ r                        :Replace
             &quot;))(&quot;)         //  with &quot;))(&quot;
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands/2649a799300cbf3770e2db37ce177d4a19035a25" rel="nofollow noreferrer">05AB1E (legacy)</a>, <s>19</s> 17 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands/2649a799300cbf3770e2db37ce177d4a19035a25" rel="nofollow noreferrer">05AB1E (legacy)</a>, <s>19</s> 17 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>',¢F„(*x.;',…))(:
 </code></pre>
 <p>-2 bytes (<code>'(…(*(.;</code> → <code>„(*x.;</code>) switching to the legacy version of 05AB1E (built in Python), where multiply on strings to repeat them works</p>
@@ -83,7 +90,7 @@ r                        :Replace
                    # (after the loop, the result is output implicitly)
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 19 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 19 bytes</h1>
 <pre><code>≔⪪θ,η⪫⪪⪫η))(¦(*⭆η(*
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/9@xuDgzPU8juCAns0SjUEdBSUdJU0chQ9OaK6AoM69Ewys/EyYLZmYAlWhqaoAUKWlogajgEqDCdN/EArAcSExT0/r/f6fEIg0tTQ23/HwdIBOIqzT/65blAAA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: Port of @akamayu's K answer.</p>
@@ -94,13 +101,13 @@ r                        :Replace
 </code></pre>
 <p>Join that split with <code>))(</code>, then split again on <code>(*</code>, then join with <code>(*</code> repeated for each part of the original split.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 17 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 17 bytes</h1>
 <pre><code>+`(\).+),
 (*$1))(
 </code></pre>
 <p><a href="https://tio.run/##K0otycxL/P9fO0EjRlNPW1OHS0NLxVBTU@P/f7f8fA0tTQ0gpckFZTslFmlyAQmouA4WPhBXaQIA" rel="nofollow noreferrer" title="Retina 0.8.2 – Try It Online">Try it online!</a> Link includes test cases. Explanation: Repeatedly replace each comma in turn from right to left with <code>))(</code>, inserting an extra <code>(*</code> after the return type each time.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 34 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 34 bytes</h1>
 <p>Replace each <code>,</code> with <code>))(</code> and repeat <code>(*</code> for number of <code>,</code> times.</p>
 <pre><code>{((2*#i)#&quot;(*&quot;)/&quot;(*&quot;\&quot;))(&quot;/i:&quot;,&quot;\x}
 </code></pre>
@@ -113,7 +120,7 @@ r                        :Replace
  ((2*#i)#&quot;(*&quot;)                        &quot;(*&quot; repeated for 1 + number of &quot;,&quot; times
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 21 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 21 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>iṂœṖjċ”,⁾(*ẋƊṣ”,j“))(
 </code></pre>
 <p>A full program that accepts a string and prints the result.</p>
@@ -132,13 +139,6 @@ i                     - first index of {'('}
                 j“))( - join with &quot;))(&quot;
                       - implicit print    
 </code></pre>
-</div>
-<div id="pu7" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 61 bytes</h1>
-
-<pre class="lang-javascript prettyprint-override"><code>x=&gt;x.replace(/\W+(\w*)/g,(_,y)=&gt;y?(s+=`)(${y})`,'(*'):s,s='')
-</code></pre>
-<p><a href="https://tio.run/##jYvBCsIwEETvfoewu2ls70pa8OAveCnYENOihG5JRBvFb48RPCp4GAbmvTnrqw7Gn6bLauSjTb1Ks6rn0tvJaWOxavcFtjdB1SDxICOpOjYYCtURLh/xSZ0EFEDrIIMCoLRZGB4DO1s6HrBH2DGjIMxFQPSDbrX/RvP8@cq/jJz720ov" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<p>.</p>
 </div>
 
 <table id="st">
