--- a/q/183390.html
+++ b/q/183390.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>095</td><td>JavaScript Node.js</td><td>240827T040112Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/275181#275181">l4m2</a></td></tr>
+<tr d-ix="0"><td>091</td><td>JavaScript Node.js</td><td>240827T040112Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/275181#275181">l4m2</a></td></tr>
 <tr d-ix="1"><td>011</td><td>Brachylog</td><td>240825T151755Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/275140#275140">Unrelate</a></td></tr>
 <tr d-ix="2"><td>040</td><td>Wolfram Language Mathematica</td><td>190418T081627Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183434#183434">att</a></td></tr>
 <tr d-ix="3"><td>007</td><td>Japt h</td><td>190417T214932Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183416#183416">Shaggy</a></td></tr>
@@ -50,12 +50,16 @@
 <tr d-ix="21"><td>019</td><td>Pyth</td><td>190417T134011Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183391#183391">Sok</a></td></tr>
 <tr d-ix="22"><td>144</td><td>Wolfram Language Mathematica</td><td>190417T143335Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183395#183395">ZaMoC</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 95 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 91 bytes</h1>
 
-<pre class="lang-javascript prettyprint-override"><code>a=&gt;(N=g=([p,q,...x],n,...s)=&gt;1/p?g(x,n+p,...s,p)+g([q,...x],n,...s):N&gt;n|s&lt;g||[N=n,S=s])(a,0)&amp;&amp;S
+<pre class="lang-javascript prettyprint-override"><code>g=([p,q,...x],n=N=-1/0,...s)=&gt;1/p?g(x,~~n+p,...s,p)&amp;&amp;g([q,...x],n,...s):N&gt;n|s&lt;g?S:(N=n,S=s)
 </code></pre>
-<p><a href="https://tio.run/##bZHNboMwDMfvewpOVaI6kAQCdFrYG3DpEeWA@oE2VYGNaeqBd2cOUK0lJUAS@@f4b@ez/q37w/dH98NsezyNZz3WuiClbjSpOviCMAyvBqybe6oLEXXvDbmC3XaTCTq6bUi14l7Lwg79WzMMVakt7HVvKKmB081mPx5a27eXU3hpG3ImlQAJMTABLMaVMgE@lAZRFKArRsPLKiABBQnEE3h7loAEEhNVCp3rIIVBguPrvscsarL6eQR/SHGfB10eDTjMcxodaxyLzbAKJlHxCkf7k9Nn2vinZ09g6ZrJXKNSYJn5hyWkHp5j9SwWwHEkEjPJ1Cy4c7ltNK3mtVeJ05YDw0vBeH7f2dztPV7hZeeTQLzzuckLz/w@8bkSp47tdq5f/CaOoywUNf9xHv8A" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<p>awful</p>
+<p><a href="https://tio.run/##bZHNboMwDMfvewpOVdAc8gEBWi3tG3DpEeVQdS3aVAU2pqmHqa/OHNJuLSHhI7F/jv923nffu37/@dZ9Udu@HoajHhpN6g4@IEmSswGrK00F427bx3otWLdpyBkuF/vcjUbo4sWiIfVfhEdX1dr@9C/NZrsilbaw1X087Fvbt6dDcmobciS1AAkpUAE0xZUyEY44jhiL0JWi4WkSkIGCDNIRvI1rQAaZYbVC5zRIYZDg@Lj3MYsarWEewR9S3OdBV0ADTjNPo2OKY7EFVkElKp7gaJ853dMmPL2YgaVrJnWNyoEW5h@WkAd4idXTVADHmUnMJHNzxZ3Lbdm48uugEqetBIqXgvH8vrOl2we8wssuR4F4577JV56GfeK@EqeOLpeuX/wmjqMsFOW/@B9@AQ" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>,<s> 95 </s>94 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>a=&gt;(N=g=([p,q,...x],n,...s)=&gt;1/p?g(x,n+p,...s,p)&amp;&amp;g([q,...x],n,...s):N&gt;n|s&lt;g?S:(N=n,S=s))(a,0)
+</code></pre>
+<p><a href="https://tio.run/##bZHLboMwEEX3/QpWka2OwbxJVJM/yCZL5AXKA7WKDC1VlUX/nV4DURMcDNieOeO5M/6of@r@8PXefQvTHk/DWQ21KtlONYpVHX2S7/tXTcbOPVdlGHTbhl3JvHajiTq@WjWsWoCbXWl@@7dmu9/gLEN71XPOapJ8OLSmby8n/9I27MyqkCKKSYQkYqxS7eHh3AsCD64YhpdFQEIpJRSP4O2ZAxJKdFClcC6DUgSFEq/9HrOko9XNE8qHFPd54HJowtDPaTiWOIrNUYWIoHiBw/7k9InW7un5EziyzRS2URmJXP/DEWUOXqB6EYckMZIImaJMz7h12W0wrqa1U4nVVpDApSBe3ne2sHuHT3HZxSgQdz41eeaF2yc5VWLVifXa9kvexEnIgqjpj3n4Aw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 11 bytes</h1>
 <pre><code>{⊇ġ₂hᵐ}ᶠ+ᵒt
