--- a/q/275165.html
+++ b/q/275165.html
@@ -54,6 +54,7 @@
 &amp;j=1:\color{blue}{(1,2)}\color{green}{(2,1)}\color{blue}{(1,3)}\color{green}{(3,1)}\color{blue}{(1,4)}\color{purple}{(4,2)}\\
 &amp;j=2:\color{blue}{(2,3)}\color{green}{(3,2)}\color{blue}{(2,4)}\color{purple}{(4,3)}\\
 &amp;j=3:\color{blue}{(3,4)}\color{red}{(4,0)}\end{aligned}$$</span></p>
+<p>Note that the actual JS implementation directly manipulates the entries of the original array rather than their indices.</p>
 <h3>Commented</h3>
 <pre class="lang-javascript prettyprint-override"><code>f = (             // f is a recursive function taking:
   [ v,            //   v   = next element
@@ -62,19 +63,20 @@
 ) =&gt;              //
 a.map((p, i) =&gt;   // for each element p at index i in a[]:
   [               //
-    v, p,         //   insert the pair (v, p):
+    v, p,         //   insert the pair (v, p)
     p,            //   insert the pair (p, X), where ...
     a[i + 1] ?    //     if this is not the last element:
       v           //       X = v
     :             //     else:
       i ?         //       if i &gt; 0:
-        [ a[0],   //         X = a[0] followed by
-          f(a, b) //         the result of a recursive call
+        [ a[0],   //         X = a[0] followed by the result
+          f(a, b) //             of a recursive call
         ]         //
       :           //       else (last iteration):
         b         //         X = b
   ]               //
-) + &quot;&quot;            // end of map(); coerce to a string
+)                 // end of map()
++ &quot;&quot;              // coerce to a string
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 71 bytes</h1>
