--- a/q/275165.html
+++ b/q/275165.html
@@ -26,23 +26,76 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>011</td><td>Japt</td><td>240827T064722Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275182#275182">Shaggy</a></td></tr>
-<tr d-ix="1"><td>067</td><td>or</td><td>240827T011728Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275176#275176">l4m2</a></td></tr>
-<tr d-ix="2"><td>007</td><td>05AB1E</td><td>240827T071746Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275183#275183">Kevin Cr</a></td></tr>
-<tr d-ix="3"><td>069</td><td>JavaScript ES6</td><td>240826T210254Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275167#275167">Arnauld</a></td></tr>
-<tr d-ix="4"><td>108</td><td>Jelly</td><td>240827T001136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275174#275174">Jonathan</a></td></tr>
-<tr d-ix="5"><td>159</td><td>Google Sheets</td><td>240826T231658Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275173#275173">doubleun</a></td></tr>
+<tr d-ix="0"><td>1087</td><td>Jelly</td><td>240827T001136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275174#275174">Jonathan</a></td></tr>
+<tr d-ix="1"><td>154</td><td>Google Sheets</td><td>240826T231658Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275173#275173">doubleun</a></td></tr>
+<tr d-ix="2"><td>011</td><td>Japt</td><td>240827T064722Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275182#275182">Shaggy</a></td></tr>
+<tr d-ix="3"><td>067</td><td>or</td><td>240827T011728Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275176#275176">l4m2</a></td></tr>
+<tr d-ix="4"><td>007</td><td>05AB1E</td><td>240827T071746Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275183#275183">Kevin Cr</a></td></tr>
+<tr d-ix="5"><td>069</td><td>JavaScript ES6</td><td>240826T210254Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275167#275167">Arnauld</a></td></tr>
 <tr d-ix="6"><td>074</td><td>Python</td><td>240826T215815Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275172#275172">shape wa</a></td></tr>
 <tr d-ix="7"><td>009</td><td>Vyxal</td><td>240826T212519Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275169#275169">emanresu</a></td></tr>
 <tr d-ix="8"><td>018</td><td>Charcoal</td><td>240826T210607Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275168#275168">Neil</a></td></tr>
 <tr d-ix="9"><td>023</td><td>Jelly</td><td>240826T191846Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275166#275166">hyper-ne</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 11 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <S> 10 8 </s> 7 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>ŒcẎṙ-żƊ
+</code></pre>
+<p>A monadic Link that accepts a list of names (lists of characters) and yields a list of pairs of names.</p>
+<p><strong><a href="https://tio.run/##y0rNyan8///opOSHu/oe7pype3TPsa7/h9vd//@PVnLMyUxOVdJRUHLKTwJRzhmJRTmZYBGXxDIw7QqkYgE" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
+<h4>How?</h4>
+<pre><code>ŒcẎṙ-żƊ - Link: Names
+Œc      - ordered pairs {Names} -&gt; [[a,b],[a,c],...,[a,Z],[b,c],...[Y,Z]]
+  Ẏ     - tighten               -&gt; [a,b,a,c,...,a,Z,b,c,...,X,Y,Z]
+      Ɗ - last three links as a monad - f(X=that):
+    -   -   -1
+   ṙ    -   rotate {X} left by -1 (rotate right by 1)
+                                -&gt; [Z,a,b,a,c,...,a,Z,b,c,...,X,Y]
+     ż  -   zip with {X}        -&gt; [[Z,a],[a,b],[b,a],[a,c],...,[a,Z],[Z,b],[b,c],...,[X,Y]]
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1>Google Sheets, 154 bytes</h1>
+<pre><code>=let(s,&quot; &quot;,f,lambda(f,a,let(n,counta(a)-1,h,+a,t,choosecols(a,sequence(n,1,2)),if(n,join(s,sort(h&amp;s&amp;h&amp;s&amp;t&amp;s&amp;t),f(f,t)),))),mid(f(f,1:1),2+len(A1),9^9)&amp;A1)
+</code></pre>
+<p>Put the names in row <code>1</code> and the formula in cell <code>A2</code>.</p>
+<p>The formula takes the first name and pairs it with every name that follows it, repeating each name twice every time. Does the same recursively with remaining names, pairing each name with every name that follows it (but without pairing with preceding ones.) Finally, tidies up the head and tail with string manipulation.</p>
+<p><img src="https://i.sstatic.net/Jjij4L2C.png" alt="screenshot" /></p>
+<p>Ungolfed:</p>
+<pre><code>=let( 
+  s, &quot; &quot;, 
+  f, lambda(f, a, let( 
+    n, counta(a) - 1, 
+    head, single(a), 
+    tail, choosecols(a, sequence(n, 1, 2)), 
+    if(n, 
+      join(s, 
+        sort(head &amp; s &amp; head &amp; s &amp; tail &amp; s &amp; tail), 
+        f(f, tail) 
+      ), 
+      &quot;&quot; 
+    ) 
+  )), 
+  mid(f(f, { A1:1 }), 2 + len(A1), 9^9) &amp; A1 
+)
+</code></pre>
+<p>Uses <code>sort()</code> as array enabler only.</p>
+<p>Pretty much the same in JavaScript (non-competing):</p>
+<pre class="lang-js prettyprint-override"><code>f = a =&gt;
+  a.slice(1)
+    .map(n =&gt; ([a[0], a[0], n, n]).join())
+    .join()
+  + (a.length &gt; 1 ? ',' + f(a.slice(1)) : '')
+
+g = A =&gt; f(A).slice(A[0].length + 1) + A[0]
+
+console.log(g([&quot;Alice&quot;,&quot;Bob&quot;,&quot;Cole&quot;,&quot;Dave&quot;])) // &quot;Alice,Bob,Bob,Alice,Alice,Cole,Cole,Alice,Alice,Dave,Dave,Bob,Bob,Cole,Cole,Bob,Bob,Dave,Dave,Cole,Cole,Dave,Dave,Alice&quot;
+</code></pre>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 11 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>iUà2)c ã2 â
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=aVXgMiljIOMyIOI&amp;input=WzAgMSAyIDNdCi1R" rel="nofollow noreferrer">Try it</a></p>
 </div>
-<div id="pu1" class="pu"><p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/f8/zVYjOlEnSUdPT68iVqdS09YuyR4mUFlTk6YRDZXTBIolgphpIA0Q5dGxmrFWFf@T8/OK83NS9XLy0zWAskqOOZnJqUo6Sk75SUAyJD9XKVZTkwtDFUgFEDsDsQsQu4JU/QcA" rel="nofollow noreferrer">or 67 bytes flatten</a></p>
+<div id="pu3" class="pu"><p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/f8/zVYjOlEnSUdPT68iVqdS09YuyR4mUFlTk6YRDZXTBIolgphpIA0Q5dGxmrFWFf@T8/OK83NS9XLy0zWAskqOOZnJqUo6Sk75SUAyJD9XKVZTkwtDFUgFEDsDsQsQu4JU/QcA" rel="nofollow noreferrer">or 67 bytes flatten</a></p>
 <h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 71 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=([a,b,...x],y)=&gt;b?[[a,b],...y||f([b,...x]),[b,a],...f([a,...x],[])]:x
@@ -55,7 +108,7 @@
 <li>A-&gt;C-&gt;A, A-&gt;D-&gt;A, ...</li>
 </ul>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 7 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 7 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>.Æ˜ìü2Ù
 </code></pre>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/275174/52210"><em>@JonathanAllan</em>'s Jelly answer</a>, so make sure to upvote that answer as well!</p>
@@ -70,7 +123,7 @@
          # (after which the result is output implicitly)
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1>JavaScript (ES6), 69 bytes</h1>
+<div id="pu5" class="pu"><h1>JavaScript (ES6), 69 bytes</h1>
 <p>Expects an array of strings and returns a flat list as a comma-separated string.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>f=([v,...a],b=v)=&gt;a.map((p,i)=&gt;[v,p,p,a[i+1]?v:i?[a[0],f(a,b)]:b])+&quot;&quot;
@@ -112,56 +165,6 @@ a.map((p, i) =&gt;   // for each element p at index i in a[]:
   ]               //
 )                 // end of map()
 + &quot;&quot;              // coerce to a string
-</code></pre>
-</div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="noreferrer">Jelly</a>, <S> 10 </s> 8 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="noreferrer">bytes</a></h1>
-<pre><code>ŒcẎ;⁸,ƝQ
-</code></pre>
-<p>A monadic Link that accepts a list of names (lists of characters) and yields a list of pairs of names.</p>
-<p><strong><a href="https://tio.run/##y0rNyan8///opOSHu/qsHzXu0Dk2N/D/4Xb3//@jlRxzMpNTlXQUlJzyk0CUc0ZiUU4mWMQlsQxMuwKpWAA" rel="noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
-<h4>How?</h4>
-<pre><code>ŒcẎ;⁸,ƝQ - Link: Names
-Œc       - ordered pairs {Names} -&gt; [[a,b],[a,c],...,[a,Z],[b,c],...[Y,Z]]
-  Ẏ      - tighten               -&gt; [a,b,a,c,...,a,Z,b,c,...Y,Z]
-   ;⁸    - concatenate {Names}   -&gt; [a,b,a,c,...,a,Z,b,c,...Y,Z,a,b,c,...,Y,Z]
-      Ɲ  - for neighbouring pairs:
-     ,   -   pair                -&gt; [[a,b],[b,a],[a,c],...,[a,Z],[Z,b],[b,c],...,[Y,Z],[Z,a],[a,b],[b,c],...,[Y,Z]]
-       Q - deduplicate           -&gt; [[a,b],[b,a],[a,c],...,[a,Z],[Z,b],[b,c],...,[Y,Z],[Z,a]]
-</code></pre>
-</div>
-<div id="pu5" class="pu"><h1>Google Sheets, 159 bytes</h1>
-<pre><code>=let(a,1:1,s,&quot; &quot;,mid(trim(join(s,map(a,lambda(n,let(o,offset(n,,1,,99),r,ifna(filter(o,len(o))),join(s,sort(if(len(r),n&amp;s&amp;n&amp;s&amp;r&amp;s&amp;r,)))))))),2+len(a),9^9)&amp;s&amp;a)
-</code></pre>
-<p>Put the names in row <code>1</code> and the formula in cell <code>A2</code>.</p>
-<p>The formula takes the first name and pairs it with every name that follows it, repeating each name twice every time. Does the same with remaining names, pairing each name with every name that follows it (but without pairing with preceding ones.) Finally, tidies up the head and tail with string manipulation.</p>
-<p><img src="https://i.sstatic.net/F0BFCQnV.png" alt="screenshot" /></p>
-<p>Ungolfed:</p>
-<pre><code>=let(
-  a, A1:1, 
-  s, &quot; &quot;, 
-  mid( 
-    trim(join(s, 
-      map(a, lambda(n, let( 
-        o, offset(n, 0, 1, 1, 99), 
-        r, ifna(filter(o, len(o))), 
-        join(s, sort(if(len(r), n &amp; s &amp; n &amp; s &amp; r &amp; s &amp; r, iferror(ø)))) 
-      ))) 
-    )), 
-    2 + len(choosecols(a, 1)), 9^9 
-  ) &amp; s &amp; choosecols(a, 1) 
-)
-</code></pre>
-<p>Pretty much the same in JavaScript (non-competing):</p>
-<pre class="lang-js prettyprint-override"><code>f = a =&gt;
-  a.slice(1)
-    .map(n =&gt; ([a[0], a[0], n, n]).join())
-    .join()
-  + (a.length &gt; 1 ? ',' + f(a.slice(1)) : '')
-
-g = A =&gt; f(A).slice(A[0].length + 1) + A[0]
-
-console.log(g([&quot;Alice&quot;,&quot;Bob&quot;,&quot;Cole&quot;,&quot;Dave&quot;]))
-// &quot;Alice,Bob,Bob,Alice,Alice,Cole,Cole,Alice,Alice,Dave,Dave,Bob,Bob,Cole,Cole,Bob,Bob,Dave,Dave,Cole,Cole,Dave,Dave,Alice&quot;
 </code></pre>
 </div>
 <div id="pu6" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>88</s> 74 bytes</h1>
